# AI-For-Bharath-Sign_language_simulator

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PROGRESS.md  PROJECT_SUMMARY.md  README.md  USER_GUIDE.md  package-lock.json  package.json  tsconfig.json  turbo.json  webpack.config.js
.kiro/specs/accessibility-ai-serverless/: .config.kiro  design.md  requirements.md  tasks.md
apps/android-app/: build.gradle
apps/android-app/app/: build.gradle
apps/backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
apps/backend/examples/: speaker_diarization_example.py  speech_engine_example.py  streaming_inference_example.py
apps/backend/src/: __init__.py
apps/backend/src/services/: README.md  __init__.py  speech_engine.py
apps/backend/tests/: test_speaker_diarization.py  test_speech_engine.py  test_speech_engine_streaming.py
apps/chrome-extension/: manifest.json  package.json
apps/chrome-extension/src/: ExtensionController.ts  background.ts  content.ts  popup.html  popup.tsx
apps/chrome-extension/src/audio/: AudioCapture.ts  (+1 more)
infrastructure/: deploy.sh  samconfig.toml  template.yaml
infrastructure/.aws-sam/: build.toml
lambda/cache-manager/: index.js  package.json
lambda/common/: error-handler.js
lambda/cost-monitor/: index.js  package.json
lambda/health-check/: index.js  package.json
lambda/preferences-handler/: index.js  package.json
lambda/sign-language-translator/: index.js  package.json
lambda/transcription-service/: index.js  package.json
scripts/: setup.sh
(+19 files in other folders)
