[tool.poetry]
name = "accessibility-ai-backend"
version = "1.0.0"
description = "Backend services for Accessibility AI System"
authors = ["Accessibility AI Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
torch = "^2.1.0"
transformers = "^4.35.0"
faster-whisper = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
hypothesis = "^6.92.1"
black = "^23.11.0"
mypy = "^1.7.1"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
